# rosweld_tools

./: .coverage  .coveragerc  .gitignore  CMakeLists.txt  out_report.xml  package.xml  test.sh  test.txt
.pytest_cache/v/cache/: nodeids
msg/: Calibration.msg  CalibrationPoint.msg  Project.msg
scripts/: debug.sh  proc_monitor.py  start.sh
src/: app.py  webserver.py
src/.pytest_cache/v/cache/: lastfailed  nodeids
src/rosweld/: autoplanner.py  bead.py  calibration.py  calibrationpoint.py  camparser.py  crosssection.py  crosssectionmanager.py  history.py  modification.py  path.py  point.py  project.py  robotcontroller.py  robotcontrollerhandler.py  rosproxy.py  savableobject.py  segment.py  signals.py  singleton.py  transformation.py  weldingstate.py
src/rosweld/settings/: groove.py  project.py  torch.py
src/rosweld/tasks/: __init__.py  container.py  forcyclecontainer.py  itask.py  laserscan.py  move.py  notify.py  wait.py  weld.py
src/tests/: test_bead.py  test_calibration.py  test_irobotcontroller.py  test_point.py  test_project.py  test_tasks.py  test_transformation.py
srv/: SetService.srv
